# TestFFmpegDemo

./: README.md  settings.gradle
AudioDemo/: build.gradle
AudioDemo/src/main/cpp/: native-lib.cpp
AudioDemo/src/main/java/com/test/testffmpegdemo/: MainActivity.kt  ZFFmpegPlayer.kt
AudioDemo/src/main/res/values/: strings.xml  themes.xml
AudioDemo/src/main/res/values-night/: themes.xml
VideoDemo/: build.gradle
VideoDemo/src/main/: AndroidManifest.xml
VideoDemo/src/main/cpp/: CMakeLists.txt  native-lib.cpp
VideoDemo/src/main/java/com/test/testffmpegdemo/: MainActivity.kt  ZFFmpegPlayer.kt
VideoDemo/src/main/res/layout/: activity_main.xml
VideoDemo/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
